# econ-monitor

./: .gitignore  launcher.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
econ_monitor/analytics/: ai_analysis.py  correlations.py  probability_models.py  regime.py  significance.py  surprises.py  transforms.py
econ_monitor/config/: indicators.py  settings.py
econ_monitor/data/: cache.py  fred_poller.py  market_data.py  openbb_client.py
econ_monitor/detection/: changedetection.py  release_calendar.py  webhook_receiver.py
econ_monitor/ui/: app.py  charts.py  styles.py
econ_monitor/ui/views/: activity_feed.py  ai_brief.py  calendar_view.py  guide.py  indicator_detail.py  markets.py  overview.py  probability_models.py  timeline.py
